fix(categories-tile): adapt dark mode

--- a/assets/scss/partials/article.scss
+++ b/assets/scss/partials/article.scss
@@ -235,7 +235,7 @@
             height: var(--tile-height);
             left: 0px;
             top: 0px;
-            background: linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,1));
+            background: linear-gradient(90deg, transparent, var(--card-background));
         }
 
         .article-details {
